--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "google-blogger",
   "version": "0.0.1",
-  "description": "project using the google blogger api to access data",
+  "description": "Project using the google blogger api to access data",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+	"dev:server": "nodemon -L index.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,7 @@
     "grunt",
     "npm"
   ],
-  "author": "sebastian maddox, tashina jacobs, quentin mccarthy",
+  "author": "Sebastian Maddox, Tashina Jacobs, Quentin McCarthy",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/sebknight/google-blogger/issues"
