--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"dev:server": "nodemon -L index.js"
+    "dev:server": "nodemon -L index.js"
   },
   "repository": {
     "type": "git",
@@ -26,9 +26,14 @@
   "homepage": "https://github.com/sebknight/google-blogger#readme",
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "cssmin": "^0.4.3",
     "express": "^4.16.3",
+    "googleapis": "^33.0.0",
+    "grunt-cli": "^1.3.1",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.4"
+    "jshint": "^2.9.6",
+    "popper.js": "^1.14.4",
+    "uglify": "^0.1.5"
   },
   "devDependencies": {
     "grunt": "^1.0.3",
