--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
     "googleapis": "^33.0.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4"
