--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:server": "nodemon -L index.js"
+    "dev:server": "nodemon -L index.js --ignore data/*"
   },
   "repository": {
     "type": "git",
