--- a/package.json
+++ b/package.json
@@ -26,11 +26,9 @@
   "homepage": "https://github.com/sebknight/google-blogger#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "bootstrap": "^4.1.3",
     "express": "^4.16.3",
     "googleapis": "^33.0.0",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.14.4"
+    "jquery": "^3.3.1"
   },
   "devDependencies": {
     "grunt": "^1.0.3",
